--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
