--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "react": "^18",
@@ -22,7 +25,9 @@
     "react-hook-form": "^7.52.1",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
